--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.5",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
     "prisma": "^4.6.1",
