Enabled support for Angular i18n routing

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-/build/
-/node_modules/
-/public/
-/temp/
+build
+node_modules
+public
+temp
+prisma/migrations
+utils/res
+dist
 .env
-/prisma/migrations/
-/utils/res/
 littleterrarium.config.ts
