--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "littleterrarium-backend",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "start": "cross-env NODE_ENV=production ts-node --esm ./src/server.ts",
     "build": "cross-env NODE_ENV=production tsc",
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.3.1",
     "@quixo3/prisma-session-store": "^3.1.10",
+    "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -19,6 +20,7 @@
     "express-async-errors": "^3.1.1",
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "prisma": "^5.3.1",
     "sharp": "^0.32.0"
   },
