--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "littleterrarium-backend",
-  "version": "1.0.2",
+  "version": "1.0.3",
+  "type": "module",
   "scripts": {
-    "start": "cross-env NODE_ENV=production ts-node --esm ./src/server.ts",
+    "start": "cross-env NODE_ENV=production tsx ./src/server.ts",
     "build": "cross-env NODE_ENV=production tsc",
-    "dev": "cross-env NODE_ENV=development ts-node-dev --rs --respawn --watch tsconfig.json,src,littleterrarium.config.ts --transpile-only src/server.ts",
-    "db-species": "ts-node --esm ./utils/create_species.ts"
+    "dev": "cross-env NODE_ENV=development tsx watch --clear-screen=false src/server.ts",
+    "db-species": "tsx ./utils/create_species.ts"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "prisma": "^5.3.1",
-    "sharp": "^0.32.0"
+    "sharp": "^0.33.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -31,8 +32,7 @@
     "@types/express-session": "^1.17.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.9",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.3"
+    "tsx": "^4.6.2",
+    "typescript": "^5.3.0"
   }
 }
