--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "littleterrarium-backend",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "type": "module",
   "scripts": {
-    "start": "cross-env NODE_ENV=production tsx ./src/server.ts",
+    "start": "cross-env NODE_ENV=production tsc & node ./build/server.js",
     "build": "cross-env NODE_ENV=production tsc",
     "dev": "cross-env NODE_ENV=development tsx watch --clear-screen=false src/server.ts",
     "db-species": "tsx ./utils/create_species.ts"
@@ -32,6 +32,7 @@
     "@types/express-session": "^1.17.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.9",
+    "csv-parse": "^5.5.3",
     "tsx": "^4.6.2",
     "typescript": "^5.3.0"
   }
