--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.5",
   "type": "module",
   "scripts": {
-    "start": "cross-env NODE_ENV=production tsc & node ./build/server.js",
+    "start": "cross-env NODE_ENV=production tsc & cross-env NODE_ENV=production node ./build/server.js",
     "build": "cross-env NODE_ENV=production tsc",
     "dev": "cross-env NODE_ENV=development tsx watch --clear-screen=false src/server.ts",
     "db-species": "tsx ./utils/create_species.ts"
