--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "csv-parse": "^5.5.3",
     "tsx": "^4.6.2",
     "typescript": "^5.3.0"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
